--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -45,6 +45,7 @@ button{
 body{
     overflow-x: hidden;
     margin: 0 auto;
+    min-width: 375px;
 }
 
 .page-section{
