--- a/app/scss/_media-phone.scss
+++ b/app/scss/_media-phone.scss
@@ -35,11 +35,6 @@
     .header__play-text {
         font-size: 12px;
         line-height: 130%;
-        & p{
-            white-space: nowrap;
-            overflow: hidden;
-            text-overflow:ellipsis; 
-        }
         
         &::before{
             font-size: 10px;
@@ -50,13 +45,15 @@
         margin-right: 8px;
     }
     .header__play{
-        width: 110px;
+        width: 30vw;
+        min-width: 110px;
         margin-left: 50px;
        
     }
 
     .footer{
         padding: 0 16px 52px 16px;
+        width: 100%;
         &__block__btns{
             position: absolute;
             left:0;
@@ -93,6 +90,7 @@
         }
         &__block-text{
             width: 40vw;
+            min-width: 150px;
         }
         &__block-title{
             font-size: 18px;
@@ -110,7 +108,7 @@
         }
         &__dec-2{
             right: 4px;
-            bottom: 40px;
+            bottom: 43px;
             left: unset;
             transform: rotate(-30deg);
 
